--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
 
 /* hero section */
 #hero{
-  background-image: url(image/background.jpg);
+  background-image: url(background.jpg);
   height: 90vh;
   width: 100%;
   background-size:cover;
@@ -185,7 +185,7 @@ body {
 }
 
 #hero button{
-  background-image: url(image/promotion.jpg);
+  background-image: url(promotion.jpg);
   background-color: transparent;
   color: #088178;
   border: 0;
@@ -324,7 +324,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(assets/asset\ 8.jpeg);
+  background-image: url(asset\ 8.jpeg);
   width: 100%;
   height: 40vh;
   background-size: cover;
@@ -363,7 +363,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-image: url(assets/asset\ 7.jpeg);
+  background-image: url(asset\ 7.jpeg);
   min-width: 580px;
   height: 50vh;
   background-size: cover;
@@ -372,7 +372,7 @@ body {
 }
 
 #sm-banner .banner-box2{
-  background-image: url(assets/asset\ 68.jpeg);
+  background-image: url(asset\ 68.jpeg);
 }
 #sm-banner h4{
   color:darkblue;
@@ -410,7 +410,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-image: url(assets/asset\ 67.jpeg);
+  background-image: url(asset\ 67.jpeg);
   min-width: 30%;
   height: 30vh;
   background-size: cover;
@@ -419,10 +419,10 @@ body {
   margin-bottom: 20px;
 }
 #banner3 .banner-box2{
-  background-image: url(assets/asset\ 65.jpeg);
+  background-image: url(asset\ 65.jpeg);
 }
 #banner3 .banner-box3{
-  background-image: url(assets/asset\ 66.jpeg);
+  background-image: url(asset\ 66.jpeg);
 }
 #banner3 h2{
   color:blueviolet;
@@ -442,7 +442,7 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  background-image: url(image/background\ 1.jpg);
+  background-image: url(background\ 1.jpg);
   background-repeat: no-repeat;
   background-position: 20% 30%;
   background-color: #041e42;
